Closed Bug 1445412 Opened 6 years ago Closed 6 years ago

Local android builds are broken from bug 1444276

Categories

(Core :: Preferences: Backend, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(1 file)

Comment on attachment 8958590 [details]
Bug 1445412 - Fix typo resulting in compilation error.

https://reviewboard.mozilla.org/r/227500/#review233320

Thanks for the fix. And thumbs down to configurations not tested on automation :(
Attachment #8958590 - Flags: review?(n.nethercote) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a644a4855be7
Fix typo resulting in compilation error. r=njn
https://hg.mozilla.org/mozilla-central/rev/a644a4855be7
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: