Bug 1445412 - Fix typo resulting in compilation error. r=njn

MozReview-Commit-ID: 6Rtl4mtRirZ